<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titleHeading"
        android:id="@+id/titleHeading"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/titleOutput"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/titleHeading" />

    <ImageView
        android:layout_width="400px"
        android:layout_height="400px"
        android:id="@+id/displayOutput"
        android:layout_below="@+id/titleOutput"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Ingredients"
        android:id="@+id/ingreHeading"
        android:layout_below="@+id/displayOutput"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/ingreOutput"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/ingreHeading"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/url"
        android:id="@+id/urlHeading"
        android:layout_below="@+id/ingreOutput"
        android:layout_alignParentStart="true"
        android:layout_marginTop="61dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/urlOutput"
        android:layout_alignTop="@+id/urlHeading"
        android:layout_toEndOf="@+id/urlHeading"
        android:autoLink="web"
        android:linksClickable="true" />

</RelativeLayout>
    <!--
      Assignment : Homework 04
      File Name : HW04_Group15.zip
      Full Name: Sai Charan Reddy Vallapureddy, Manideep Reddy Nukala
      -->